actualizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="..//css/animate.css">
 
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <!-- BODY -->
@@ -36,11 +36,7 @@
         <div class="main-container">
             <div class="lateral-menu">
                     <div class="categoria">
-<<<<<<< HEAD
                         <a href="./categories/recursosHumanos.html"><i class="fas fa-users borderRadious"></i></a>
-=======
-                        <a href="#"><i class="fas fa-users borderRadious"></i></a>
->>>>>>> master
                         <div class="sub-categoria">
                             <h3>Recursos Humanos</h3>
                             <a>Editor de organización</a>
